--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posicionamento de Blocos</title>
+    <link href="assets/css/styles.css" rel="stylesheet">
+    <title>Landing Page Academia</title>
 </head>
 <body>
-    <h1>Ola</h1>
-    <h2>Bom dia</h2>
+    <aside class="menu">
+        <div>
+    <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+    </ul>
+        </div>
+    </aside>
 </body>
 </html>
