Incremento no css

--- a/index.html
+++ b/index.html
@@ -4,19 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/3df637a2f2.js" crossorigin="anonymous"></script>
     <link href="assets/css/styles.css" rel="stylesheet">
     <title>Landing Page Academia</title>
 </head>
 <body>
-    <aside class="menu">
-        <div>
-    <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-    </ul>
+    <header>
+        <div class="menu-content">
+            <h1 class="logo">ViniciusPersonal</h1>
+            <nav class="header-menu">
+                <ul class="lista-itens">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Aulas</a></li>
+                    <li><a href="#">Agenda</a></li>
+                    <li><a href="#">Contatos</a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                </ul>
+            </nav>
         </div>
-    </aside>
+    </header>
+
+    <main>
+        <div class="main-content">
+            <h1 class="primeiro-texto">NÃO BASTA SÓ MUDAR. É preciso conservar a mudança!</h1>
+            <h2 class="segundo-texto">Se inscreva agora</h2>
+            <div classe="bnts">
+                <button class="btn-experimental">Agendar aula experimental</button>
+                <button class="btn-personal">Contactar Personal Trainer</button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
