Atualição do site

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <li><a href="#">Aulas</a></li>
                     <li><a href="#">Agenda</a></li>
                     <li><a href="#">Contatos</a></li>
-                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com/personal_avilavinicius/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/vinicius.avila.56"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
                 </ul>
             </nav>
         </div>
@@ -30,7 +30,7 @@
         <div class="main-content">
             <h1 class="primeiro-texto">NÃO BASTA SÓ MUDAR. É preciso conservar a mudança!</h1>
             <h2 class="segundo-texto">Se inscreva agora</h2>
-            <div classe="bnts">
+            <div classe="btn">
                 <button class="btn-experimental">Agendar aula experimental</button>
                 <button class="btn-personal">Contactar Personal Trainer</button>
             </div>
