--- a/index.html
+++ b/index.html
@@ -5,36 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3df637a2f2.js" crossorigin="anonymous"></script>
+    <link href="assets/css/normalize.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-    <title>Landing Page Academia</title>
+    <title>Document</title>
 </head>
-<body>
-    <header>
-        <div class="menu-content">
-            <h1 class="logo">ViniciusPersonal</h1>
-            <nav class="header-menu">
-                <ul class="lista-itens">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Aulas</a></li>
-                    <li><a href="#">Agenda</a></li>
-                    <li><a href="#">Contatos</a></li>
-                    <li><a href="https://www.instagram.com/personal_avilavinicius/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.facebook.com/vinicius.avila.56"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<body class="responsivel">
+    <input id="close-menu" class="close-menu" type="checkbox" aria-label="Close menu" role="button">
+    <label class="close-menu-label" for="close-menu" title="close menu"></label>
+    <nav class="menu">
+    
+        <p>VINICIUSPERSONAL</p>
+        <ul>
+            <li><a href="servico">Serviços</a></li>
+            <li><a href="aulas">Aulas</a></li>
+            <li><a href="contato">Contato</a></li>
+            <li><a href="https://www.instagram.com/personal_avilavinicius/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.facebook.com/vinicius.avila.56"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+        </ul>
+    </nav>
 
-    <main>
-        <div class="main-content">
-            <h1 class="primeiro-texto">NÃO BASTA SÓ MUDAR. É preciso conservar a mudança!</h1>
-            <h2 class="segundo-texto">Se inscreva agora</h2>
+    <header class="img-fundo">
+        <h1 class="texto-1">NÃO BASTA SÓ MUDAR.<br> É preciso conservar a mudança!</h1>
+            <h2 class="texto-2">Se inscreva agora</h2>
             <div classe="btn">
                 <button class="btn-experimental">Agendar aula experimental</button>
                 <button class="btn-personal">Contactar Personal Trainer</button>
             </div>
-        </div>
-    </main>
+    </header>
+
 </body>
 </html>
