--- a/contato.html
+++ b/contato.html
@@ -27,13 +27,11 @@
         </ul>
     </nav>
 
-    <header>
-        <h1 class="texto-1">Personal Trainer</h1>
-        <h2 class="texto-2">Conheça um novo conceito em treinamento personalizado.</h2>
-        <div classe="btn">
-            <button class="btn-experimental">Agendar aula experimental</button>
-            <button class="btn-personal">Contactar Personal Trainer</button>
+    <section class="contato">
+        <div>
+            <img src="/assets/img/contato.jpeg">
         </div>
-    </header>
+
+    </section>
 </body>
 </html>
