--- a/index.html
+++ b/index.html
@@ -5,18 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3df637a2f2.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,600&display=swap" rel="stylesheet">
-    <link href="assets/css/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link href="assets/css/styles.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Personal Trainer Vinicius Avila</title>
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <a href="home">VINICIUS ÁVILA</a>
         <ul>
             <li><a href="/index.html">Home</a></li>
@@ -25,7 +20,15 @@
             <li><a href="https://www.instagram.com/personal_avilavinicius/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
             <li><a href="https://www.facebook.com/vinicius.avila.56"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
         </ul>
-    </nav>
+    </nav> -->
+
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          <div class="navbar-item" href="https://bulma.io">
+            <h1>VINICIUS ÁVILA</h1>
+          </div>
+        </div>
+      </nav>
 
     <header>
         <h1 class="texto-1">Personal Trainer</h1>
