--- a/teste.html
+++ b/teste.html
@@ -20,7 +20,7 @@
             <!-- <h1>VINICIUS ÁVILA -- PERSONAL TRAINER</h1> -->
           </div>
         </div>
-        <div class="navbar-end">
+        <div class="navbar">
           <div class="navbar-item">
             <div class="field is-grouped">
               <p class="control">
