--- a/teste.html
+++ b/teste.html
@@ -49,6 +49,9 @@
                   </span>
                 </a>
               </p>
+            </div>
+          </div>
+        </div>
       </nav>
 
     <header>
