--- a/index.html
+++ b/index.html
@@ -29,27 +29,21 @@
                                 <span class="icon">
                                     <i class="fab fa-twitter"></i>
                                 </span>
-                                <span>
-                                    Tweet
-                                </span>
+                                <span>Tweet</span>
                             </a>
                             <a class="bd-insta-button button" data-social-network="Instagram"
-                                data-social-action="instagram" target="_blank" href="">
+                                data-social-action="instagram" target="_blank" href="https://www.instagram.com/personal_avilavinicius/">
                                 <span class="icon">
                                     <i class="fab fa-instagram"></i>
                                 </span>
-                                <span>
-                                    Instagram
-                                </span>
+                                <span>Instagram</span>
                             </a>
                             <a class="bd-face-button button" data-social-network="Facebook"
-                                data-social-action="facebook" target="_blank" href="">
+                                data-social-action="facebook" target="_blank" href="https://www.facebook.com/vinicius.avila.56">
                                 <span class="icon">
                                     <i class="fab fa-facebook"></i>
                                 </span>
-                                <span>
-                                    Facebook
-                                </span>
+                                <span>Facebook</span>
                             </a>
                         </div>
                     </div>
