Criação do Calculo IMC

--- a/calculoIMC.html
+++ b/calculoIMC.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link href="assets/css/style.css" rel="stylesheet">
-    <title>Personal Trainer Vinicius Avila</title>
+    <title>Calculo do IMC</title>
 </head>
 
 <body>
@@ -57,19 +57,6 @@
             </div>
         </div>
     </div>
-
-    <header>
-        <h2 class="msgInicial">Conheça um novo conceito em treinamento personalizado.</h2>
-    </header>
-
-    <section class="section">
-        <header>
-            <div classe="btn">
-                <button class="btn-experimental">Agendar aula experimental</button>
-                <button class="btn-personal">Contactar Personal Trainer</button>
-            </div>
-        </header>
-    </section>
 </body>
 
 </html>
