Atualização do IMC

--- a/teste.html
+++ b/teste.html
@@ -52,18 +52,22 @@
         </div>
     </div>
 
-    <header>
-        <h2 class="msgInicial">Conheça um novo conceito em treinamento personalizado.</h2>
-    </header>
+    <!-- <section class="container">
+        <h1>Calcule seu IMC</h1>
+        <form action="/" id="formulario" method="post">
+            <label for="peso">Peso:</label>
+            <input type="text" id="peso" name="peso">
 
-    <section class="section">
-        <header>
-            <div classe="btn">
-                <button class="btn-experimental">Agendar aula experimental</button>
-                <button class="btn-personal">Contactar Personal Trainer</button>
-            </div>
-        </header>
+            <label for="altura">Altura:</label>
+            <input type="text" id="altura" name="altura">
+
+            <button type="submit">Calcular</button>
+        </form>
+
+        <div id="resultado"></div>
     </section>
+
+        <script src="./assets/js/calculoIMC.js"></script> -->
 </body>
 
 </html>
