--- a/teste.html
+++ b/teste.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <!-- <section class="container">
+    <section class="section container">
         <h1>Calcule seu IMC</h1>
         <form action="/" id="formulario" method="post">
             <label for="peso">Peso:</label>
@@ -67,7 +67,7 @@
         <div id="resultado"></div>
     </section>
 
-        <script src="./assets/js/calculoIMC.js"></script> -->
+        <script src="./assets/js/calculoIMC.js"></script>
 </body>
 
 </html>
