--- a/teste.html
+++ b/teste.html
@@ -53,13 +53,13 @@
     </div>
 
     <section class="section container">
-        <h1>Calcule seu IMC</h1>
+        <h1>Calcule seu IMC:</h1>
         <form action="/" id="formulario" method="post">
             <label for="peso">Peso:</label>
-            <input type="text" id="peso" name="peso">
+            <input type="text" id="peso" name="peso" minlength="3" maxlength="6" step="0.01">
 
             <label for="altura">Altura:</label>
-            <input type="text" id="altura" name="altura">
+            <input type="number" id="altura" name="altura" minlength="3" maxlength="4" step="0.01">
 
             <button type="submit">Calcular</button>
         </form>
