--- a/teste.html
+++ b/teste.html
@@ -60,14 +60,14 @@
 
             <label for="altura">Altura:</label>
             <input type="number" id="altura" name="altura" minlength="3" maxlength="4" step="0.01">
-
+            <div><h3 class="teste">IMC = Peso ÷ Altura²</h3></div>
             <button type="submit">Calcular</button>
         </form>
-
+        
         <div id="resultado"></div>
     </section>
-
-        <script src="./assets/js/calculoIMC.js"></script>
+    
+    <script src="./assets/js/calculoIMC.js"></script>
 </body>
 
 </html>
