--- a/calculoIMC.html
+++ b/calculoIMC.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link href="assets/css/style.css" rel="stylesheet">
-    <title>Calculo do IMC</title>
+    <title>Personal Trainer Vinicius Avila</title>
 </head>
 
 <body>
@@ -29,27 +29,23 @@
                                 <span class="icon">
                                     <i class="fab fa-twitter"></i>
                                 </span>
-                                <span>
-                                    Tweet
-                                </span>
+                                <span>Tweet</span>
                             </a>
                             <a class="bd-insta-button button" data-social-network="Instagram"
-                                data-social-action="instagram" target="_blank" href="">
+                                data-social-action="instagram" target="_blank"
+                                href="https://www.instagram.com/personal_avilavinicius/">
                                 <span class="icon">
                                     <i class="fab fa-instagram"></i>
                                 </span>
-                                <span>
-                                    Instagram
-                                </span>
+                                <span>Instagram</span>
                             </a>
                             <a class="bd-face-button button" data-social-network="Facebook"
-                                data-social-action="facebook" target="_blank" href="">
+                                data-social-action="facebook" target="_blank"
+                                href="https://www.facebook.com/vinicius.avila.56">
                                 <span class="icon">
                                     <i class="fab fa-facebook"></i>
                                 </span>
-                                <span>
-                                    Facebook
-                                </span>
+                                <span>Facebook</span>
                             </a>
                         </div>
                     </div>
@@ -57,6 +53,25 @@
             </div>
         </div>
     </div>
+
+    <section class="section container">
+        <h1>Calcule seu IMC:</h1>
+        <form action="/" id="formulario" method="post">
+            <label for="peso">Peso:</label>
+            <input type="text" id="peso" name="peso" minlength="3" maxlength="6" step="0.01">
+
+            <label for="altura">Altura:</label>
+            <input type="number" id="altura" name="altura" minlength="3" maxlength="4" step="0.01">
+            <div>
+                <h3 class="teste">IMC = Peso ÷ Altura²</h3>
+            </div>
+            <button type="submit">Calcular</button>
+        </form>
+
+        <div id="resultado"></div>
+    </section>
+
+    <script src="./assets/js/calculoIMC.js"></script>
 </body>
 
 </html>
