Atualização do Index e Exercicios

--- a/calculoIMC.html
+++ b/calculoIMC.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link href="assets/css/styles.css" rel="stylesheet">
-    <title>Personal Trainer Vinicius Avila</title>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <title>Personal Trainer Vinicius Ávila</title>
 </head>
 
 <body>
     <aside class="menu">
-        <p class="menu-label">VINICIUS AVILA PERSONAL TRAINER</p>
+        <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
     </aside>
 
     <div class="card">
@@ -25,7 +25,7 @@
                     <div class="navbar-item">
                         <div class="buttons">
                             <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet"
-                                target="_blank" href="">
+                                target="_blank" href="/">
                                 <span class="icon">
                                     <i class="fab fa-twitter"></i>
                                 </span>
@@ -68,7 +68,7 @@
         </div>
         <div class="column container">
             <div class="imgIMC">
-                <img src="./assets/img/classDeIMC.png" alt="">
+                <img src="./assets/img/classDeIMC.png" alt="Classificação de IMC">
             </div>
     </div>
     </section>
@@ -77,7 +77,7 @@
         <div id="resultado"></div>
     </section>
     
-    <script src="./assets/js/paraTeste.js"></script>
+    <script src="./assets/js/calculoIMC.js"></script>
 </body>
 
 </html>
