--- a/exercicios.html
+++ b/exercicios.html
@@ -1,33 +1,105 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3df637a2f2.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,600&display=swap" rel="stylesheet">
-    <link href="assets/css/normalize.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,600&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link href="assets/css/styles.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Personal Trainer Vinicius Ávila</title>
 </head>
-<body>
-    <nav>
-        <a href="home">VINICIUS ÁVILA</a>
-        <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/exercicios.html">Exercicios</a></li>
-            <li><a href="/contato.html">Contato</a></li>
-            <li><a href="https://www.instagram.com/personal_avilavinicius/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.facebook.com/vinicius.avila.56"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
-        </ul>
-    </nav>
 
-    <header>
+<body>
+    <aside class="menu">
+        <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
+    </aside>
+
+    <div class="box">
+        <article class="media">
+            <div class="media-content">
+                <div class="content">
+                    <p>
+                        <strong>1 – Flexão de braços</strong>
+                        <br>
+                        Deitado de barriga para baixo, apoie as mãos espalmadas no chão, na direção dos ombros, e as pontas dos pés no chão.<br>
+                        Eleve e desça o tronco, sem flexionar o quadril. Se estiver muito difícil, apoie os joelhos no chão.
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
+                <div class="content">
+                    <p>
+                        <strong>2 – Agachamento</strong>
+                        <br>
+                        Em pé, mantenha os pés paralelos aos ombros e desça o quadril como se fosse sentar em uma cadeira.<br>
+                        Para facilitar o equilíbrio, pode levantar os braços à frente do peito, deixando-os paralelos ao chão.<br>
+                        O peso do corpo deve estar nos calcanhares e os joelhos não devem passar as pontas dos pés.<br>
+                        Quem está começando pode usar uma cadeira para realmente se sentar e levantar.            
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
+            </div>
+        </article>
+    </div>
+
+    <!-- <section class="section sectionRedeSocial">
+        <div class="card">
+            <footer class="card-footer">
+                <h1 class="card-footer-item">1 – Flexão de braços</h1>
+            </footer>
+            <div class="card-content">
+              <div class="content">
+                Deitado de barriga para baixo, apoie as mãos espalmadas no chão, na direção dos ombros, e as pontas dos pés no chão. 
+                Eleve e desça o tronco, sem flexionar o quadril. Se estiver muito difícil, apoie os joelhos no chão.    
+              </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section sectionRedeSocial">
+        <div class="card">
+            <footer class="card-footer">
+                <h1 class="card-footer-item">1 – Flexão de braços</h1>
+            </footer>
+            <div class="card-content">
+              <div class="content">
+                Deitado de barriga para baixo, apoie as mãos espalmadas no chão, na direção dos ombros, e as pontas dos pés no chão. 
+                Eleve e desça o tronco, sem flexionar o quadril. Se estiver muito difícil, apoie os joelhos no chão.    
+              </div>
+            </div>
+        </div>
+    </section> -->
+
+    <!-- <header>
         <h1>Personal Trainer</h1><br>
         <p> <b>1 – Flexão de braços</b><br>
             Deitado de barriga para baixo, apoie as mãos espalmadas no chão, na direção dos ombros, e as pontas dos pés no chão. 
@@ -79,6 +151,6 @@
             como em uma flexão de braço até encostar o peito e o quadril no chão. Levante o tronco novamente. Dê um salto para juntar 
             as pernas aos braços, mantendo as mãos espalmadas no chão. Em seguida, dê mais um salto jogando os braços para cima e juntando 
             as mãos.</p>
-    </header>
+    </header> -->
 </body>
 </html>
