--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link href="assets/css/style.css" rel="stylesheet">
-    <title>Personal Trainer Vinicius Avila</title>
+    <title>Personal Trainer Vinicius Ávila</title>
 </head>
 
 <body>
     <aside class="menu">
-        <p class="menu-label">VINICIUS AVILA PERSONAL TRAINER</p>
+        <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
     </aside>
 
     <div class="card">
