--- a/exercicios.html
+++ b/exercicios.html
@@ -17,13 +17,13 @@
     <aside class="menu">
         <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
     </aside>
-
+    <section class="section" id="sectionEditFundo">
     <div class="box">
         <article class="media">
             <div class="media-content">
                 <div class="content">
                     <p>
-                        <strong>1 – Flexão de braços</strong>
+                        <strong id="pExercicios">1 – Flexão de braços</strong>
                         <br>
                         Deitado de barriga para baixo, apoie as mãos espalmadas no chão, na direção dos ombros, e as pontas dos pés no chão.<br>
                         Eleve e desça o tronco, sem flexionar o quadril. Se estiver muito difícil, apoie os joelhos no chão.
@@ -45,7 +45,7 @@
                 </nav>
                 <div class="content">
                     <p>
-                        <strong>2 – Agachamento</strong>
+                        <strong id="pExercicios">2 – Agachamento</strong>
                         <br>
                         Em pé, mantenha os pés paralelos aos ombros e desça o quadril como se fosse sentar em uma cadeira.<br>
                         Para facilitar o equilíbrio, pode levantar os braços à frente do peito, deixando-os paralelos ao chão.<br>
@@ -67,90 +67,186 @@
                         </a>
                     </div>
                 </nav>
+                <div class="content">
+                    <p>
+                        <strong id="pExercicios">3 – Panturrilhas</strong>
+                        <br>
+                        Em pé, apoie as mãos na parede. Eleve os calcanhares, ficando apenas na ponta dos pés, e desça novamente.
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
+                <div class="content">
+                    <p>
+                        <strong id="pExercicios">4 – Prancha isométrica</strong>
+                        <br>
+                        De barriga para baixo, apoie o peso do corpo nos antebraços e nas pontas dos pés. Mantenha o corpo em linha reta por de 25 a 30 
+                        segundos. Cuidado para não levantar o quadril.
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
+                <div class="content">
+                    <p>
+                        <strong id="pExercicios">5 – Polichinelo com braço lateral</strong>
+                        <br>
+                        Comece em pé, com os dois pés juntos e os braços ao longo do corpo. Dê um salto e, simultaneamente, separe as pernas e eleve 
+                        os dois braços lateralmente até que se encontrem sobre a cabeça. Dê mais um salto para voltar à posição inicial e, assim, 
+                        sucessivamente.
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
+                <div class="content">
+                    <p>
+                        <strong id="pExercicios">6 – Polichinelo frontal</strong>
+                        <br>
+                        Com os dois pés juntos e os braços ao longo do corpo, dê um salto para posicionar uma perna à frente, como se tivesse 
+                        dado um passo, enquanto levanta os braços, um à frente do corpo e outro atrás, simultaneamente. No lado que a perna está atrás, 
+                        o braço fica à frente, e vice-versa.
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
+                <div class="content">
+                    <p>
+                        <strong id="pExercicios">7 – Abdominal completo</strong>
+                        <br>
+                        Deitado no chão, levante o tronco em direção às pernas, enquanto as encolhe e abraça. Desça novamente e repita.
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
+                <div class="content">
+                    <p>
+                        <strong id="pExercicios">8 – Tríceps</strong>
+                        <br>
+                        Fique de costas para a cadeira e apoie as mãos no assento, com os dedos voltados para a frente e os joelhos 
+                        flexionados à frente do corpo. Suba e desça o corpo, flexionando os cotovelos, sem distanciá-los do tronco.
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
+                <div class="content">
+                    <p>
+                        <strong id="pExercicios">9 – Skipping</strong>
+                        <br>
+                        Eleve os joelhos até a altura do quadril, alternadamente, como se estivesse correndo sem sair do lugar.
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
+                <div class="content">
+                    <p>
+                        <strong id="pExercicios">10 – Burpee</strong>
+                        <br>
+                        Comece em pé. Apoie as mãos no chão, na direção dos ombros, enquanto salta jogando as pernas para trás. Flexione os cotovelos 
+                        como em uma flexão de braço até encostar o peito e o quadril no chão. Levante o tronco novamente. Dê um salto para juntar 
+                        as pernas aos braços, mantendo as mãos espalmadas no chão. Em seguida, dê mais um salto jogando os braços para cima e juntando 
+                        as mãos.
+                    </p>
+                </div>
+                <nav class="level is-mobile">
+                    <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                            <span class="icon is-small">
+                                <i class="fas fa-reply" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                            <span class="icon is-small">
+                                <i class="fas fa-heart" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
+                </nav>
             </div>
         </article>
     </div>
-
-    <!-- <section class="section sectionRedeSocial">
-        <div class="card">
-            <footer class="card-footer">
-                <h1 class="card-footer-item">1 – Flexão de braços</h1>
-            </footer>
-            <div class="card-content">
-              <div class="content">
-                Deitado de barriga para baixo, apoie as mãos espalmadas no chão, na direção dos ombros, e as pontas dos pés no chão. 
-                Eleve e desça o tronco, sem flexionar o quadril. Se estiver muito difícil, apoie os joelhos no chão.    
-              </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="section sectionRedeSocial">
-        <div class="card">
-            <footer class="card-footer">
-                <h1 class="card-footer-item">1 – Flexão de braços</h1>
-            </footer>
-            <div class="card-content">
-              <div class="content">
-                Deitado de barriga para baixo, apoie as mãos espalmadas no chão, na direção dos ombros, e as pontas dos pés no chão. 
-                Eleve e desça o tronco, sem flexionar o quadril. Se estiver muito difícil, apoie os joelhos no chão.    
-              </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- <header>
-        <h1>Personal Trainer</h1><br>
-        <p> <b>1 – Flexão de braços</b><br>
-            Deitado de barriga para baixo, apoie as mãos espalmadas no chão, na direção dos ombros, e as pontas dos pés no chão. 
-            Eleve e desça o tronco, sem flexionar o quadril. Se estiver muito difícil, apoie os joelhos no chão.
-            <br>
-            <br>
-            <b>2 – Agachamento</b><br>
-            Em pé, mantenha os pés paralelos aos ombros e desça o quadril como se fosse sentar em uma cadeira. Para facilitar o equilíbrio, 
-            pode levantar os braços à frente do peito, deixando-os paralelos ao chão. O peso do corpo deve estar nos calcanhares e os joelhos 
-            não devem passar as pontas dos pés. Quem está começando pode usar uma cadeira para realmente se sentar e levantar.
-            <br>
-            <br>
-            <b>3 – Panturrilhas</b><br>
-            Em pé, apoie as mãos na parede. Eleve os calcanhares, ficando apenas na ponta dos pés, e desça novamente.
-            <br>
-            <br>
-            <b>4 – Prancha isométrica</b><br>
-            De barriga para baixo, apoie o peso do corpo nos antebraços e nas pontas dos pés. Mantenha o corpo em linha reta por de 25 a 30 
-            segundos. Cuidado para não levantar o quadril.
-            <br>
-            <br>
-            <b>5 – Polichinelo com braço lateral</b><br>
-            Comece em pé, com os dois pés juntos e os braços ao longo do corpo. Dê um salto e, simultaneamente, separe as pernas e eleve 
-            os dois braços lateralmente até que se encontrem sobre a cabeça. Dê mais um salto para voltar à posição inicial e, assim, 
-            sucessivamente.
-            <br>
-            <br>
-            <b>6 – Polichinelo frontal</b><br>
-            Com os dois pés juntos e os braços ao longo do corpo, dê um salto para posicionar uma perna à frente, como se tivesse 
-            dado um passo, enquanto levanta os braços, um à frente do corpo e outro atrás, simultaneamente. No lado que a perna está atrás, 
-            o braço fica à frente, e vice-versa.
-            <br>
-            <br>
-            <b>7 – Abdominal completo</b><br>
-            Deitado no chão, levante o tronco em direção às pernas, enquanto as encolhe e abraça. Desça novamente e repita.
-            <br>
-            <br>
-            <b>8 – Tríceps</b><br>
-            Fique de costas para a cadeira e apoie as mãos no assento, com os dedos voltados para a frente e os joelhos 
-            flexionados à frente do corpo. Suba e desça o corpo, flexionando os cotovelos, sem distanciá-los do tronco.
-            <br>
-            <br>
-            <b>9 – Skipping</b><br>
-            Eleve os joelhos até a altura do quadril, alternadamente, como se estivesse correndo sem sair do lugar.
-            <br>
-            <br>
-            <b>10 – Burpee</b><br>
-            Comece em pé. Apoie as mãos no chão, na direção dos ombros, enquanto salta jogando as pernas para trás. Flexione os cotovelos 
-            como em uma flexão de braço até encostar o peito e o quadril no chão. Levante o tronco novamente. Dê um salto para juntar 
-            as pernas aos braços, mantendo as mãos espalmadas no chão. Em seguida, dê mais um salto jogando os braços para cima e juntando 
-            as mãos.</p>
-    </header> -->
+</section>   
 </body>
 </html>
