--- a/teste.html
+++ b/teste.html
@@ -32,7 +32,7 @@
         </header>        
     </section>
 
-    <section class="sectionRedeSocial">
+    <section id="sectionEdit">
         <div class="card">
             <div class="card-content">
                 <div class="content">
