Correção do Index

--- a/calculoIMC.html
+++ b/calculoIMC.html
@@ -16,9 +16,13 @@
 <body>
     <aside class="menu">
         <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
+        <ul class="menu-list">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./exercicios.html">Exercicios Praticos</a></li>
+        </ul>
     </aside>
 
-    <div class="card">
+    <!-- <div class="card">
         <div class="card-content">
             <div class="content">
                 <div class="navbar">
@@ -50,7 +54,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <section class="section marginTopSection">
     <div class="columns">
@@ -63,7 +67,7 @@
                 <label for="altura" class="subtitle is-5">Altura:</label>
                 <input type="text" id="altura" name="altura" minlength="3" maxlength="4" step="0.01">
                 
-                <button type="submit">Calcular</button>
+                <button class="buttonIMC" type="submit">Calcular</button>
             </form>
         </div>
         <div class="column container">
