--- a/exercicios.html
+++ b/exercicios.html
@@ -9,13 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <title>Personal Trainer Vinicius Ávila</title>
 </head>
 
 <body>
     <aside class="menu">
         <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
+        <ul class="menu-list">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./calculoIMC.html">Calculo de IMC</a></li>
+        </ul>
     </aside>
     <section class="section" id="sectionEditFundo">
     <div class="box">
