--- a/teste.html
+++ b/teste.html
@@ -23,13 +23,13 @@
     </header>
 
     <section class="section">
-        <header class="linkPag">
-            <div classe="btn">
-                <button class="btn-experimental">Exercite em Casa</button>
-                <button class="btn-personal">Calcule seu IMC</button>
-                <button class="btn-personal">Contactar Personal</button>
+        <!-- <header class="linkPag"> -->
+            <div class="linkPag">
+                <button><a href="./exercicios.html">Exercite em Casa</a></button>
+                <button class="btnIndex"><a href="./calculoIMC.html">Calcule seu IMC</a></button>
+                <button class="btnIndex"><a href="./contato.html">Contactar Personal</a></button>
             </div>
-        </header>        
+        <!-- </header>         -->
     </section>
 
     <section id="sectionEdit">
