--- a/index.html
+++ b/index.html
@@ -18,52 +18,56 @@
         <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
     </aside>
 
-    <div class="card">
-        <div class="card-content">
-            <div class="content">
-                <div class="navbar">
-                    <div class="navbar-item">
-                        <div class="buttons">
-                            <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet"
-                                target="_blank" href="">
-                                <span class="icon">
-                                    <i class="fab fa-twitter"></i>
-                                </span>
-                                <span>Tweet</span>
-                            </a>
-                            <a class="bd-insta-button button" data-social-network="Instagram"
-                                data-social-action="instagram" target="_blank" href="https://www.instagram.com/personal_avilavinicius/">
-                                <span class="icon">
-                                    <i class="fab fa-instagram"></i>
-                                </span>
-                                <span>Instagram</span>
-                            </a>
-                            <a class="bd-face-button button" data-social-network="Facebook"
-                                data-social-action="facebook" target="_blank" href="https://www.facebook.com/vinicius.avila.56">
-                                <span class="icon">
-                                    <i class="fab fa-facebook"></i>
-                                </span>
-                                <span>Facebook</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <header>
         <h2 class="msgInicial">Conheça um novo conceito em treinamento personalizado.</h2>
     </header>
 
     <section class="section">
-        <header>
-            <div classe="btn">
-                <button class="btn-experimental">Agendar aula experimental</button>
-                <button class="btn-personal">Contactar Personal Trainer</button>
+        <header class="linkPag">
+            <div class="btn">
+                <button><a href="./exercicios.html">Exercite em Casa</a></button>
+                <button><a href="./calculoIMC.html">Calcule seu IMC</a></button>
+                <button><a href="./contato.html">Contactar Personal</a></button>
             </div>
-        </header>
+        </header>        
     </section>
+
+    <section id="sectionEdit">
+        <div class="card">
+            <div class="card-content">
+                <div class="content">
+                    <div class="navbar">
+                        <div class="navbar-item">
+                            <div class="buttons">
+                                <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet"
+                                    target="_blank" href="">
+                                    <span class="icon">
+                                        <i class="fab fa-twitter"></i>
+                                    </span>
+                                    <span>Tweet</span>
+                                </a>
+                                <a class="bd-insta-button button" data-social-network="Instagram"
+                                    data-social-action="instagram" target="_blank" href="https://www.instagram.com/personal_avilavinicius/">
+                                    <span class="icon">
+                                        <i class="fab fa-instagram"></i>
+                                    </span>
+                                    <span>Instagram</span>
+                                </a>
+                                <a class="bd-face-button button" data-social-network="Facebook"
+                                    data-social-action="facebook" target="_blank" href="https://www.facebook.com/vinicius.avila.56">
+                                    <span class="icon">
+                                        <i class="fab fa-facebook"></i>
+                                    </span>
+                                    <span>Facebook</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
