Corração Index e CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="btn">
                 <button><a href="./exercicios.html">Exercite em Casa</a></button>
                 <button><a href="./calculoIMC.html">Calcule seu IMC</a></button>
-                <button><a href="./contato.html">Contactar Personal</a></button>
+                <button><a href="https://wa.me/5535999772226?text=Olá,%20eu%20gostaria%20de%20marcar%20uma%20avaliação%20com%20você.">Contactar Personal</a></button>
             </div>
         </header>        
     </section>
