--- a/teste.html
+++ b/teste.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <title>Personal Trainer Vinicius Ávila</title>
 </head>
 
@@ -17,19 +17,19 @@
     <aside class="menu">
         <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
     </aside>
-    
+
     <header>
         <h2 class="msgInicial">Conheça um novo conceito em treinamento personalizado.</h2>
     </header>
 
     <section class="section">
-        <!-- <header class="linkPag"> -->
-            <div class="linkPag">
+        <header class="linkPag">
+            <div class="btn">
                 <button><a href="./exercicios.html">Exercite em Casa</a></button>
-                <button class="btnIndex"><a href="./calculoIMC.html">Calcule seu IMC</a></button>
-                <button class="btnIndex"><a href="./contato.html">Contactar Personal</a></button>
+                <button><a href="./calculoIMC.html">Calcule seu IMC</a></button>
+                <button><a href="https://wa.me/5535999772226?text=Olá,%20eu%20gostaria%20de%20marcar%20uma%20avaliação%20com%20você.">Contactar Personal</a></button>
             </div>
-        <!-- </header>         -->
+        </header>        
     </section>
 
     <section id="sectionEdit">
