--- a/teste.html
+++ b/teste.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/styles.css" rel="stylesheet">
     <title>Personal Trainer Vinicius Ávila</title>
 </head>
 
@@ -18,8 +18,9 @@
         <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
     </aside>
 
-    <header>
-        <h2 class="msgInicial">Conheça um novo conceito em treinamento personalizado.</h2>
+    <header class="intro">
+        <h2 data-js="typing" class="msgInicial typing">Conheça</h2>
+        <!-- <span data-js="typing" class="typing"></span> -->
     </header>
 
     <section class="section">
@@ -68,6 +69,7 @@
         </div>
     </section>
 
+    <script src="./teste.js"></script>
 </body>
 
 </html>
