--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <span class="menu-label">VINICIUS ÁVILA PERSONAL TRAINER</span>
     </aside>
 
-    <header>
-        <h2 class="msgInicial">Conheça um novo conceito em treinamento personalizado.</h2>
+    <header class="intro">
+        <h2 data-js="typing" class="msgInicial typing">Conheça</h2>
+        <!-- <span data-js="typing" class="typing"></span> -->
     </header>
 
     <section class="section">
@@ -68,6 +69,7 @@
         </div>
     </section>
 
+    <script src="./assets/js/efeitoTextInicial.js"></script>
 </body>
 
 </html>
