--- a/teste.html
+++ b/teste.html
@@ -11,10 +11,48 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link href="assets/css/styles.css" rel="stylesheet">
     <title>Personal Trainer Vinicius Ávila</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
-    
+    <div>
+    <main class="conteudo">
+        <article class="card-slide">
+            <h1>Lorem</h1>
+            <span>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam odit voluptatum temporibus excepturi dicta. Eveniet ratione beatae corrupti explicabo est.
+            </span>
+        </article>
+        <article class="card-slide">
+            <h1>Lorem</h1>
+            <span>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, expedita numquam fuga deserunt debitis amet?
+            </span>
+        </article>
+        <article class="card-slide">
+            <h1>Lorem</h1>
+            <span>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam corporis eos a aperiam quas obcaecati unde hic reprehenderit necessitatibus.
+            </span>
+        </article>
+        <article class="card-slide">
+            <h1>Lorem</h1>
+            <span>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti ipsum optio perferendis rerum cumque suscipit vitae maiores delectus reiciendis laboriosam, quod libero. Alias deserunt illo natus deleniti voluptatibus cumque explicabo.
+            </span>
+        </article>
+        <article class="card-slide">
+            <h1>Lorem</h1>
+            <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+            </span>
+        </article>
+    </main>
+</div>
+
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
 </html>
