--- a/exercicios.html
+++ b/exercicios.html
@@ -33,20 +33,7 @@
                         Eleve e desça o tronco, sem flexionar o quadril. Se estiver muito difícil, apoie os joelhos no chão.
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
                 <div class="content">
                     <p>
                         <strong id="pExercicios">2 – Agachamento</strong>
@@ -57,86 +44,36 @@
                         Quem está começando pode usar uma cadeira para realmente se sentar e levantar.            
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
                 <div class="content">
                     <p>
                         <strong id="pExercicios">3 – Panturrilhas</strong>
                         <br>
-                        Em pé, apoie as mãos na parede. Eleve os calcanhares, ficando apenas na ponta dos pés, e desça novamente.
+                        Em pé, apoie as mãos na parede.<br>
+                        Eleve os calcanhares, ficando apenas na ponta dos pés, e desça novamente.
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
                 <div class="content">
                     <p>
                         <strong id="pExercicios">4 – Prancha isométrica</strong>
                         <br>
-                        De barriga para baixo, apoie o peso do corpo nos antebraços e nas pontas dos pés. Mantenha o corpo em linha reta por de 25 a 30 
-                        segundos. Cuidado para não levantar o quadril.
+                        De barriga para baixo, apoie o peso do corpo nos antebraços e nas pontas dos pés.<br>
+                        Mantenha o corpo em linha reta por de 25 a 30 segundos.<br>
+                        Cuidado para não levantar o quadril.
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
                 <div class="content">
                     <p>
                         <strong id="pExercicios">5 – Polichinelo com braço lateral</strong>
                         <br>
-                        Comece em pé, com os dois pés juntos e os braços ao longo do corpo. Dê um salto e, simultaneamente, separe as pernas e eleve 
-                        os dois braços lateralmente até que se encontrem sobre a cabeça. Dê mais um salto para voltar à posição inicial e, assim, 
-                        sucessivamente.
+                        Comece em pé, com os dois pés juntos e os braços ao longo do corpo.<br> 
+                        Dê um salto e, simultaneamente, separe as pernas e eleve os dois braços lateralmente até que se encontrem sobre a cabeça.<br>
+                        Dê mais um salto para voltar à posição inicial e, assim, sucessivamente.
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
                 <div class="content">
                     <p>
                         <strong id="pExercicios">6 – Polichinelo frontal</strong>
@@ -146,63 +83,25 @@
                         o braço fica à frente, e vice-versa.
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
                 <div class="content">
                     <p>
                         <strong id="pExercicios">7 – Abdominal completo</strong>
                         <br>
-                        Deitado no chão, levante o tronco em direção às pernas, enquanto as encolhe e abraça. Desça novamente e repita.
+                        Deitado no chão, levante o tronco em direção às pernas, enquanto as encolhe e abraça.<br>
+                        Desça novamente e repita.
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
                 <div class="content">
                     <p>
                         <strong id="pExercicios">8 – Tríceps</strong>
                         <br>
-                        Fique de costas para a cadeira e apoie as mãos no assento, com os dedos voltados para a frente e os joelhos 
-                        flexionados à frente do corpo. Suba e desça o corpo, flexionando os cotovelos, sem distanciá-los do tronco.
+                        Fique de costas para a cadeira e apoie as mãos no assento, com os dedos voltados para a frente e os joelhos flexionados à frente do corpo.<br>
+                        Suba e desça o corpo, flexionando os cotovelos, sem distanciá-los do tronco.
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
                 <div class="content">
                     <p>
                         <strong id="pExercicios">9 – Skipping</strong>
@@ -210,44 +109,20 @@
                         Eleve os joelhos até a altura do quadril, alternadamente, como se estivesse correndo sem sair do lugar.
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
                 <div class="content">
                     <p>
                         <strong id="pExercicios">10 – Burpee</strong>
                         <br>
-                        Comece em pé. Apoie as mãos no chão, na direção dos ombros, enquanto salta jogando as pernas para trás. Flexione os cotovelos 
-                        como em uma flexão de braço até encostar o peito e o quadril no chão. Levante o tronco novamente. Dê um salto para juntar 
-                        as pernas aos braços, mantendo as mãos espalmadas no chão. Em seguida, dê mais um salto jogando os braços para cima e juntando 
-                        as mãos.
+                        Comece em pé.<br>
+                        Apoie as mãos no chão, na direção dos ombros, enquanto salta jogando as pernas para trás.<br>
+                        Flexione os cotovelos como em uma flexão de braço até encostar o peito e o quadril no chão.<br>
+                        Levante o tronco novamente.<br>
+                        Dê um salto para juntar as pernas aos braços, mantendo as mãos espalmadas no chão.<br>
+                        Em seguida, dê mais um salto jogando os braços para cima e juntando as mãos.
                     </p>
                 </div>
-                <nav class="level is-mobile">
-                    <div class="level-left">
-                        <a class="level-item" aria-label="reply">
-                            <span class="icon is-small">
-                                <i class="fas fa-reply" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                        <a class="level-item" aria-label="like">
-                            <span class="icon is-small">
-                                <i class="fas fa-heart" aria-hidden="true"></i>
-                            </span>
-                        </a>
-                    </div>
-                </nav>
+                <hr>
             </div>
         </article>
     </div>
